# cyplam

./: .tags  README.md
cyplam/: CMakeLists.txt  package.xml
cyplam_data/: CMakeLists.txt  package.xml  setup.py
cyplam_data/config/models/: 2017_05_03_10_05_42model.ckpt.index  2017_05_05_14_27_06model.ckpt.index
cyplam_data/msg/: MsgPredictv.msg
cyplam_data/resources/: analysis.ui  data.ui  record.ui
cyplam_data/scripts/: nd_predict.py  qt_analysis.py  qt_data.py  qt_display.py  qt_hist.py  qt_predict.py  qt_record.py
cyplam_data/src/calibrate/: calibrate.py
cyplam_data/src/data/: PowerPredictor.py~  analysis.py  analysis_otsu.py  bag2dat.py  bag2data.py  bag2h5.py  bag2pandas.py  kinematics.py  labeling.py  mnist_custom.py  move_data.py  open_otsu.py  otsu.py  plot.py  predictor.py  predictor.py~  tf_cnn.py  tf_cnn_linear.py  tf_smax.py  tf_training.py  training.py
cyplam_data/src/move_data/: bag2data.py  bag2pandas.py  move_data.py
cyplam_param/: CMakeLists.txt  package.xml  setup.py
cyplam_param/resources/: param.ui
cyplam_param/scripts/: qt_param.py
cyplam_robviz/: CMakeLists.txt  package.xml
cyplam_robviz/config/: params.yaml  workcell.rviz
cyplam_robviz/launch/: robviz.launch
cyplam_robviz/resources/: data.ui  param.ui  robviz.ui
cyplam_robviz/scripts/: qt_data.py  qt_param.py  qt_record.py  robviz.py
cyplam_workcell/: CMakeLists.txt  package.xml
cyplam_workcell/config/: workcell.rviz
cyplam_workcell/launch/: cyplam_workcell.launch  workcell.launch
cyplam_workcell/urdf/: workcell.urdf
