<package>
  <name>cyplam</name>
  <version>0.1.0</version>
  <description>This package provides cyplam packages.</description>
  <maintainer email="jorge.rodriguez@aimen.es">Jorge Rodríguez-Araújo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cyplam_data</run_depend>
  <run_depend>cyplam_robviz</run_depend>
  <run_depend>cyplam_workcell</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
