<?xml version="1.0"?>
<package>
  <name>cyplam_data</name>
  <version>0.1.0</version>
  <description>The cyplan_data package</description>
  <maintainer email="veronica.panadeiro@aimen.es">Verónica Panadeiro</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
